--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -48,7 +48,7 @@ header{
 
 header #topo{
     display: flex;
-    margin: 20px 0;
+    margin: 1rem 0;
     text-align: center;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -56,7 +56,7 @@ header #topo{
 }
 
 header #topo figure img{
-    /* padding: 0 5px; */
+    margin-bottom: 1rem;
     width: 80vw;
 }
 
