--- a/assets/css/transitions.css
+++ b/assets/css/transitions.css
@@ -217,7 +217,7 @@
       height: 31.5rem;
       outline: .125rem;
       overflow: hidden;
-      margin: 0rem auto 1rem;
+      margin: 0rem auto .5rem;
       box-shadow: .4rem .4rem .6rem rgba(0, 0, 0, .2);
   }
 
@@ -234,8 +234,8 @@
   }
 
   .carrosel li img{
-      max-width: 23.5rem;
-      max-height: 31.5rem;
+      max-width: max-content;
+      max-height: max-content;
   }
 
   @keyframes carrosel{
